Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-2371

Clickable qml error messages in Application output pane jump to .qml files in build directory (instead of source directory)

    XMLWordPrintable

Details

    • 1ae598089f18f62907b005a914c915111eb1e428

    Description

      This happens only when using the [standalone] Qml app stuff. When using the qmlviewer, this is not an issue...

      If Creator is able to interpret a file location in the QDeclarative debug output (does not really always work), it may jump into a .qml file in the build directory of the [standalone] Qml app.
      The problem is that that qml file in the build directory is copied to there from the source directory. And the user may load and edit the copied .qml file which will be overwriteen on the next launch of the app.

      My 0.002 cent: Ideally, Creator would know how files get deployed, and map the file location from the build directory back to the source directory, and open the correct file.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kkohne Kai Köhne
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes