Application Output: Fix linkification of files in shadow builds / deployment folders

Try to map absolute paths pointing to files in shadow build directory
/ on the device to the respective files in the project directory.

Task-number: QTCREATORBUG-2371
Reviewed-by: dt